[tool.poetry]
name = "autotopup"
version = "0.1.0"
description = ""
authors = ["Stéphan Taljaard <steptaljaard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
